# cv_algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/image_formation/: CMakeLists.txt
app/image_formation/ex_1/: CMakeLists.txt  canvas.js  main.cpp  main.qml  qml.qrc
app/image_formation/ex_1/QML/: ShapeLine.qml  main.qml  qml.qrc
app/image_formation/ex_1/include/: BackEnd.h  LinesMatrix.h
app/image_formation/ex_1/src/: BackEnd.cpp  LinesMatrix.cpp
lib/: CMakeLists.txt
lib/algebra_ext/: CMakeLists.txt
lib/algebra_ext/include/algebra_ext/: eigen_ext.h  line_ext.h
lib/algebra_ext/src/: eigen_ext.tpp  line_ext.cpp
lib/algebra_ext/test/: CMakeLists.txt  eigen_ext_test.cpp  line_ext_test.cpp
libs/: CMakeLists.txt
libs/algebra_ext/: CMakeLists.txt
libs/algebra_ext/include/algebra_ext/: eigen_ext.h  line_ext.h
libs/algebra_ext/src/: eigen_ext.tpp  line_ext.cpp
libs/eigen_ext/: CMakeLists.txt
libs/eigen_ext/include/: eigen_ext.h
libs/eigen_ext/src/: eigen_ext.tpp
libs/opencv_plot/: CMakeLists.txt
libs/opencv_plot/src/: plot.cpp
libs/plot_ext/: CMakeLists.txt
libs/plot_ext/include/plot_ext/: line.h
modules/: CMakeLists.txt
modules/image_formation/: CMakeLists.txt
modules/image_formation/include/image_formation/: least_squares_basic.h
modules/image_formation/src/: CMakeLists.txt  ex_1.cpp  least_squares_basic.cpp
modules/image_formation/test/: CMakeLists.txt  least_squares_basic_test.cpp
topics/: CMakeLists.txt
topics/image_formation/: CMakeLists.txt
topics/image_formation/ex_1/: CMakeLists.txt
topics/image_formation/ex_1/src/: CMakeLists.txt  main.cpp
topics/image_formation/ex_2/: CMakeLists.txt
topics/image_formation/ex_2/src/: CMakeLists.txt  main.cpp
topics/image_formation/include/image_formation/: least_squares_basic.h
topics/image_formation/src/: CMakeLists.txt  ex_1.cpp  least_squares_basic.cpp
